Corrected text wrapping around image

--- a/resources/sass/modules.scss
+++ b/resources/sass/modules.scss
@@ -59,11 +59,15 @@
 .tag_next {
     font-size: 13px;
 }
+//
+
 
 .main_content--height {
     min-height: 430px;
 }
-//
+.clear_both {
+    clear: both;
+}
 
 //  
 
